AS-2004-02-20-1: Cleanup    aimk cleanup, makefile cleanup, porting
                 Review:    AA (partial review and help)

MD-2004-02-20-1: Bugfix:    - fixed wrong schedd default configuration
                 Changed:   schedd templatefiles (installation)

CR-2004-02-20-0: Bugfix:    reaching max possible connection count will disable
                            accepting/creating new connections. This is the 
                            part of fixing Issue #687
                 Changed:   communication lib

AD-2004-02-20-1: Cleanup:   Did remove obsolete code.
                 Changed:   shadowd

AH-2004-02-20-0: Bugfix:    Made libdrmaa.so again a self-contained library 
                            that requires no other Grid Engine libraries to
                            be linked against DRMAA application.
                            Added DRMAA example to default build rule.

AD-2004-02-20-0: Bugfix:    Generate error message if qmaster is already
                            running.
                 Changed:   qmaster, shadowd, daemons/common
                 Review:    CR
                 Issue:     684

EB-2004-02-20-0: Bugfix:    Added missing documentation
                 Issue:     691

SG-2004-02-20-0: Bugfix:    - evaluated 53patches
                            - fixed test 540 for the testsuite
                 Changed:   testsuite
                 Review:    CR

EB-2004-02-20-0: Bugfix:    Soft queue requests are not rejected if queues 
                            are not requestable.
                            qalter -q <queue_pattern_which_will_never_match> 
                            is not rejected.
                 Changed:   sge_qmaster
                 Issue:     688, 689
                 Review:    pending

MD-2004-02-20-0: Bugfix:    - new dialog messages
                 Changed    inst_sgeee, testsuite
                 Issue:     676

JG-2004-02-20-0: Enhancem.: Tune locking parameters of Berkeley DB.
