@@ -4,7 +4,7 @@
 .\" Copyright: 2001 by Sun Microsystems, Inc.
 .\"
 .\"___INFO__MARK_END__
-.\" $RCSfile: bootstrap.5,v $     Last Update: $Date: 2004/01/08 15:34:33 $     Revision: $Revision: 1.2 $
+.\" $RCSfile: bootstrap.5,v $     Last Update: $Date: 2004/02/20 21:09:46 $     Revision: $Revision: 1.3 $
 .\"
 .\"
 .\" Some handy macro definitions [from Tom Christensen's man(1) manual page].
@@ -29,7 +29,7 @@
 .de M		\" man page reference
 \\fI\\$1\\fR\\|(\\$2)\\$3
 ..
-.TH xxQS_NAME_Sxx_CONF 5 "$Date: 2004/01/08 15:34:33 $" "xxRELxx" "xxQS_NAMExx File Formats"
+.TH xxQS_NAME_Sxx_CONF 5 "$Date: 2004/02/20 21:09:46 $" "xxRELxx" "xxQS_NAMExx File Formats"
 .\"
 .SH NAME
 xxqs_name_sxx_conf \- xxQS_NAMExx bootstrap file
@@ -106,29 +106,22 @@ Defines how
 .M xxqs_name_sxx_qmaster 8
 writes its configuration and the status information of a running cluster.
 .PP
-Different spooling methods can be chosen at compile time or by use of shared
-libraries.
-.PP
-The default spooling method is \fIberkeleydb\fP.
+The only available spooling method is \fIberkeleydb\fP.
 .\"
 .\"
 .SH "\fBspooling_lib\fP"
-If the spooling framework was compiled to allow dynamic loading of spooling
-shared libraries, this parameter names the shared library to load during
-the bootstrapping process of
+In case of a shared linked system could be the name of a shared library to 
+be loaded at 
 .M xxqs_name_sxx_qmaster 8
-to access the spooled configuration and status data.
+initialization time.
 .PP
-For systems with statically linked spooling methods, this parameter is set to
-\fInone\fP.
-.PP
-The default spooling library is \fInone\fP.
+Currently this parameter is always set to \fInone\fP.
 .\"
 .\"
 .SH "\fBspooling_params\fP"
 Defines parameters to the chosen spooling method.
 .PP
-Each spooling method has a certain set of parameters that are needed to initialize the spooling framework, e.g. to open database files or to connect to a certain database server.
+Parameters that are needed to initialize the spooling framework, e.g. to open database files or to connect to a certain database server.
 .PP
 The default spooling parameters value (for spooling method \fIberkeleydb\fP) is [rpc_server:]database directory, e.g. /sge_local/default/spool/qmaster/spooldb for spooling to a local filesystem, or myhost:sge for spooling over a Berkeley DB RPC server.
 .\"
