@@ -360,7 +360,7 @@ proc access_lists_global_host {} {
       run_user_jobs "case 5,$A_USER,$B_USER" "$jobargs" 1 1
    
       #case 6
-      set my_global_host(xuser_lists) "$A_USER,$B_USER"
+      set my_global_host(xuser_lists) "$A_USER $B_USER"
       set my_global_host(user_lists)  "NONE"
       set_exechost my_global_host "global"
       if { $group_test == 1 } {
@@ -383,7 +383,7 @@ proc access_lists_global_host {} {
    
       #case 7
       set my_global_host(xuser_lists) "NONE"
-      set my_global_host(user_lists)  "$A_USER,$B_USER"
+      set my_global_host(user_lists)  "$A_USER $B_USER"
       set_exechost my_global_host "global"
       if { $group_test == 1 } {
          set group1 [ lindex $CHECK_FIRST_FOREIGN_SYSTEM_GROUP 0 ]
@@ -413,11 +413,11 @@ proc access_lists_global_host {} {
    run_user_jobs "group/user case 1" "$jobargs" 0 0
 
    set my_global_host(xuser_lists) "NONE"
-   set my_global_host(user_lists)  "userA_name,userA_group"
+   set my_global_host(user_lists)  "userA_name userA_group"
    set_exechost my_global_host "global"
    run_user_jobs "group/user case 2" "$jobargs" 1 0
 
-   set my_global_host(xuser_lists) "userA_name,userA_group"
+   set my_global_host(xuser_lists) "userA_name userA_group"
    set my_global_host(user_lists)  "NONE"
    set_exechost my_global_host "global"
    run_user_jobs "group/user case 3" "$jobargs" 0 1
@@ -486,7 +486,7 @@ proc access_lists_exec_host {} {
       run_user_jobs "case 5,$A_USER,$B_USER" $jobargs 1 1
    
       #case 6
-      set my_exec_host(xuser_lists) "$A_USER,$B_USER"
+      set my_exec_host(xuser_lists) "$A_USER $B_USER"
       set my_exec_host(user_lists)  "NONE"
       set_exechost my_exec_host $access_lists_host
       if { $group_test == 1 } {
@@ -504,7 +504,7 @@ proc access_lists_exec_host {} {
    
       #case 7
       set my_exec_host(xuser_lists) "NONE"
-      set my_exec_host(user_lists)  "$A_USER,$B_USER"
+      set my_exec_host(user_lists)  "$A_USER $B_USER"
       set_exechost my_exec_host $access_lists_host
       if { $group_test == 1 } {
          set group1 [ lindex $CHECK_FIRST_FOREIGN_SYSTEM_GROUP 0 ]
@@ -536,11 +536,11 @@ proc access_lists_exec_host {} {
    run_user_jobs "group/user case 1" $jobargs 0 0
 
    set my_exec_host(xuser_lists) "NONE"
-   set my_exec_host(user_lists)  "userA_name,userA_group"
+   set my_exec_host(user_lists)  "userA_name userA_group"
    set_exechost my_exec_host $access_lists_host
    run_user_jobs "group/user case 2" $jobargs 1 0
 
-   set my_exec_host(xuser_lists) "userA_name,userA_group"
+   set my_exec_host(xuser_lists) "userA_name userA_group"
    set my_exec_host(user_lists)  "NONE"
    set_exechost my_exec_host $access_lists_host
    run_user_jobs "group/user case 3" $jobargs 0 1
@@ -609,7 +609,7 @@ proc access_lists_queue {} {
       run_user_jobs "case 5,$A_USER,$B_USER" $jobargs 1 1
    
       #case 6
-      set my_queue_conf(xuser_lists) "$A_USER,$B_USER"
+      set my_queue_conf(xuser_lists) "$A_USER $B_USER"
       set my_queue_conf(user_lists)  "NONE"
       set_queue  $access_lists_queue $access_lists_host my_queue_conf
       if { $group_test == 1 } {
@@ -627,7 +627,7 @@ proc access_lists_queue {} {
    
       #case 7
       set my_queue_conf(xuser_lists) "NONE"
-      set my_queue_conf(user_lists)  "$A_USER,$B_USER"
+      set my_queue_conf(user_lists)  "$A_USER $B_USER"
       set_queue  $access_lists_queue $access_lists_host my_queue_conf
       if { $group_test == 1 } {
          set group1 [ lindex $CHECK_FIRST_FOREIGN_SYSTEM_GROUP 0 ]
@@ -658,11 +658,11 @@ proc access_lists_queue {} {
    run_user_jobs "group/user case 1" $jobargs 0 0
 
    set my_queue_conf(xuser_lists) "NONE"
-   set my_queue_conf(user_lists)  "userA_name,userA_group"
+   set my_queue_conf(user_lists)  "userA_name userA_group"
    set_queue  $access_lists_queue $access_lists_host my_queue_conf
    run_user_jobs "group/user case 2" $jobargs 1 0
 
-   set my_queue_conf(xuser_lists) "userA_name,userA_group"
+   set my_queue_conf(xuser_lists) "userA_name userA_group"
    set my_queue_conf(user_lists)  "NONE"
    set_queue  $access_lists_queue $access_lists_host my_queue_conf
    run_user_jobs "group/user case 3" $jobargs 0 1
@@ -729,7 +729,7 @@ proc access_lists_cluster_config {} {
       run_user_denied_jobs "case 5,$A_USER,$B_USER" $jobargs 1 1
    
       #case 6
-      set my_cluster_conf(xuser_lists) "$A_USER,$B_USER"
+      set my_cluster_conf(xuser_lists) "$A_USER $B_USER"
       set my_cluster_conf(user_lists)  "NONE"
       set_config my_cluster_conf "global"
       if { $group_test == 1 } {
@@ -747,7 +747,7 @@ proc access_lists_cluster_config {} {
    
       #case 7
       set my_cluster_conf(xuser_lists) "NONE"
-      set my_cluster_conf(user_lists)  "$A_USER,$B_USER"
+      set my_cluster_conf(user_lists)  "$A_USER $B_USER"
       set_config my_cluster_conf "global"
       if { $group_test == 1 } {
          set group1 [ lindex $CHECK_FIRST_FOREIGN_SYSTEM_GROUP 0 ]
@@ -778,11 +778,11 @@ proc access_lists_cluster_config {} {
    run_user_denied_jobs "group/user case 1" $jobargs 0 0
 
    set my_cluster_conf(xuser_lists) "NONE"
-   set my_cluster_conf(user_lists)  "userA_name,userA_group"
+   set my_cluster_conf(user_lists)  "userA_name userA_group"
    set_config my_cluster_conf "global"
    run_user_denied_jobs "group/user case 2" $jobargs 1 0
 
-   set my_cluster_conf(xuser_lists) "userA_name,userA_group"
+   set my_cluster_conf(xuser_lists) "userA_name userA_group"
    set my_cluster_conf(user_lists)  "NONE"
    set_config my_cluster_conf "global"
    run_user_denied_jobs "group/user case 3" $jobargs 0 1
