@@ -35,5 +35,6 @@
 echo "_GE_TESTSUITE_SCRIPT_OUTPUT_BEGIN_"
 echo $*
 echo "_GE_TESTSUITE_SCRIPT_OUTPUT_END_"
+sleep 10
 exit 0
 
