@@ -1,3 +1,8 @@
+JG-2004-02-20-1: Enhancem.: Added some documenation related to reporting, 
+                            cleanup of man page bootstrap.5.
+                 Testsuite: Fixed some problems with tests
+                            functional/accounting and bugs/issuezilla/440.
+
 AS-2004-02-20-1: Cleanup    aimk cleanup, makefile cleanup, porting
                  Review:    AA (partial review and help)
 
